--- a/templates/developer/show.html.twig
+++ b/templates/developer/show.html.twig
@@ -173,7 +173,7 @@
 {% block body %}
     <div class="container-fluid py-4">
         <!-- Developer Header -->
-        <div class="profile-header">
+        <div class="profile-header bg-blue-dark">
             <div class="row align-items-center">
                 <div class="col-md-3 text-center">
                     {% if developer.logo %}
@@ -222,7 +222,7 @@
         <div class="row">
             <!-- Developer Information -->
             <div class="col-lg-8">
-                <div class="card profile-card mb-4">
+                <div class="card profile-card mb-4 bg-blue-dark">
                     <div class="card-body p-4">
                         <h3 class="section-title">
                             <i class="fas fa-info-circle me-2"></i>Developer Information
