--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,7 +1,7 @@
 {# templates/user/_form.html.twig #}
 {{ form_start(form, {'attr': {'novalidate': 'novalidate', 'class': 'user-form'}}) }}
 
-<div class="card shadow-lg mb-4">
+<div class="card shadow-lg mb-4 bg-blue-dark">
     <div class="card-header bg-dark text-white">
         <h5 class="mb-0"><i class="fas fa-user-circle me-2"></i>Basic Information</h5>
     </div>
