--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -183,8 +183,8 @@
 
         <div class="row">
             <!-- Personal Information -->
-            <div class="col-lg-8">
-                <div class="card profile-card mb-4">
+            <div class="col-lg-8 bg-blue-dark">
+                <div class="card profile-card mb-4 bg-blue-dark">
                     <div class="card-body p-4">
                         <h3 class="section-title">
                             <i class="fas fa-user-circle me-2"></i>Personal Information
