--- a/templates/adminbase.html.twig
+++ b/templates/adminbase.html.twig
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="{{ asset('css/darkblue.css') }}">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}GameHub - Your Ultimate Game Store{% endblock %}</title>
