--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -4,7 +4,7 @@
 {% block title %}Edit User{% endblock %}
 
 {% block body %}
-    <div class="container py-5" style="background-color: #121212; min-height: 100vh;">
+    <div class="container py-5 bg-dark-blue" style="background-color: #121212; min-height: 100vh;">
         <div class="text-center mb-5">
             <h1 class="text-white display-4 fw-bold">Edit User</h1>
         </div>
