--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -4,6 +4,8 @@
 
 {% block stylesheets %}
     {{ parent() }}
+        <link rel="stylesheet" href="{{ asset('css/darkblue.css') }}">
+
     <style>
         .user-avatar {
             width: 40px;
@@ -28,7 +30,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container-fluid py-4">
+    <div class="container-fluid py-4 ">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h1>User Management</h1>
             <a href="{{ path('app_user_new') }}" class="btn btn-primary">
@@ -37,10 +39,10 @@
         </div>
 
         {# Search and Filter Section #}
-        <div class="card mb-4">
-            <div class="card-body">
+        <div class="card mb-4 bg-blue-dark">
+            <div class="card-body ">
                 <form method="get" class="row g-3">
-                    <div class="col-md-4">
+                    <div class="col-md-4 ">
                         <input type="text" name="search" class="form-control" 
                             placeholder="Search users..." 
                             value="{{ app.request.query.get('search') }}">
@@ -60,7 +62,7 @@
                         </select>
                     </div>
                     <div class="col-md-2">
-                        <button type="submit" class="btn btn-primary w-100">Filter</button>
+                        <button type="submit" class="btn btn-primary w-100 ">Filter</button>
                     </div>
                     <div class="col-md-2">
                         <a href="{{ path('app_user_index') }}" class="btn btn-outline-secondary w-100">Reset</a>
@@ -70,11 +72,11 @@
         </div>
 
         {# User Table #}
-        <div class="card shadow-sm">
-            <div class="card-body">
+        <div class="card shadow-sm bg-blue-dark">
+            <div class="card-body bg-blue-dark">
                 <div class="table-responsive">
                     <table class="table table-hover table-striped">
-                        <thead class="table-light">
+                        <thead class="table-light bg-blue-dark">
                             <tr>
                                 <th>ID</th>
                                 <th>Avatar</th>
